--- a/TestCases/report.html
+++ b/TestCases/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,45736],[],[[5,0,4,[],[1,2590,43144],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,99182],[],[[5,0,4,[],[0,2437,96740,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*CRM TC 004","*C:\\Users\\abhishek.jayalal\\Desktop\\Wakanda\\14-06-2022\\wkd_auto-14-06-2022\\TestCases\\CRM_TC_004.robot","*CRM_TC_004.robot","*<p>Sample TestCase For Automation FrameWork\x3c/p>","*TEST CASE 001"]);
+window.output["strings"] = window.output["strings"].concat(["*","*CRM TC 004","*C:\\Users\\abhishek.jayalal\\Desktop\\Wakanda\\14-06-2022\\wkd_auto-14-06-2022\\TestCases\\CRM_TC_004.robot","*CRM_TC_004.robot","*<p>Sample TestCase For Automation FrameWork\x3c/p>","*TEST CASE 001","*Element with locator '//button[text()='Edit Details']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:43","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:46","fail":0,"id":"s1","label":"CRM TC 004","name":"CRM TC 004","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:37","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:39","fail":1,"id":"s1","label":"CRM TC 004","name":"CRM TC 004","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1655482316033;
+window.output["baseMillis"] = 1655742586771;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 45770;
+window.output["generated"] = 99280;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
