--- a/TestCases/report.html
+++ b/TestCases/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,53532],[],[[5,0,4,[],[1,1100,52426],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,126319],[],[[5,0,4,[],[1,1486,124828],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*CRM 04","*C:\\Users\\abhishek.jayalal\\Desktop\\Wakanda\\20-06-2022\\wkd_auto-20-06-2022\\TestCases\\CRM_04.robot","*CRM_04.robot","*<p>Sample TestCase For Automation FrameWork\x3c/p>","*TEST CASE 001"]);
+window.output["strings"] = window.output["strings"].concat(["*","*CM 001","*C:\\Users\\abhishek.jayalal\\Desktop\\Wakanda\\20-06-2022\\wkd_auto-20-06-2022\\TestCases\\CM_001.robot","*CM_001.robot","*<p>Sample TestCase For Automation FrameWork\x3c/p>","*TEST CASE 001"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:52","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:54","fail":0,"id":"s1","label":"CRM 04","name":"CRM 04","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:02:06","fail":0,"id":"s1","label":"CM 001","name":"CM 001","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657641241435;
+window.output["baseMillis"] = 1657716792330;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 53577;
+window.output["generated"] = 126438;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
